# mytools

./: AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
.pi/plans/: a31b1564.md
.pi/todos/: 21e6bf39.md  35dc96f7.md  4a5f38e9.md  4ef11f02.md  4fe6bb08.md  597d2cb5.md  604f5747.md  6eb6f8ba.md  7186932d.md  8a85cfd9.md  93b640f1.md  99604cf4.md  9d4ef3ed.md  b2f4bd45.md  cf575495.md  e078dc16.md  f1b97b9d.md  f4079e70.md  f61bc614.md  fd36ad56.md
ansible-password-agent/: Cargo.toml
ansible-password-agent/assets/fish/vendor_conf.d/: ansible-password-agent.fish
ansible-password-agent/src/: main.rs  tty.rs
ansible-password-agent/src/backend/: linux.rs  macos.rs  mod.rs
cargo-target-clean/: Cargo.toml  README.md
cargo-target-clean/src/: main.rs
git-journal/: Cargo.toml  README.md
git-journal/src/: main.rs
git-stacked/: Cargo.toml  README.md
git-stacked/src/: main.rs
gitjuggling/: Cargo.toml
gitjuggling/src/: config.rs  discover.rs  execute.rs  gitmodules.rs  main.rs  prune.rs  remote.rs  sync_plan.rs
zoekt-reindex/: Cargo.toml  README.md
zoekt-reindex/src/: main.rs
