[package]
name = "ansible-password-agent"
version = "0.1.0"
edition = "2021"
description = "Secure credential provider for Ansible vault and become passwords"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rpassword = "7"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
