[package]
name = "gitjuggling"
version = "1.4.0"
edition = "2021"
authors = ["Vincent Rischmann <vincent@rischmann.fr>"]
description = "Run a git command in all repositories under the current working directory"
readme = "README.md"
repository = "https://github.com/vrischmann/gitjuggling"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "derive"] }
jwalk = "0.8"
rayon = "1.5"
anyhow = "1.0"
colored = "3"
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
dialoguer = "0.11"
